--- a/experience.html
+++ b/experience.html
@@ -29,7 +29,7 @@
         <aside>
             <nav>
                 <ul>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="lounger.html">Lounger</a></li>
                     <li><a href="experience.html" class="active">Experience</a></li>
                     <li><a href="inspiration.html">Inspiration</a></li>
