--- a/lounger.html
+++ b/lounger.html
@@ -26,7 +26,7 @@
     <aside>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="lounger.html" class="active">Lounger</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="inspiration.html">Inspiration</a></li>
